--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(get_centroids)
 export(plot_scatterpie)
 export(transform_data)
 export(transform_labeller)
+export(transform_sf)
 export(transform_values)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,filter)
